--- a/src/app/shared/dialogs/select-po-role/selectPoRole.html
+++ b/src/app/shared/dialogs/select-po-role/selectPoRole.html
@@ -35,7 +35,7 @@
            </table>
            <button mat-raised-button class="main-background-color main-button color-white center-element"
                (click)="selectRole()">
-               Send
+               {{this.data.roleType==="projectBillingUserId"?"Billing Person":"Project Person"}}
            </button>
        </div>
    </form>
