--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -19,3 +19,4 @@
     @import "./pages/bom.scss";
     @import "./pages/rfq-bids.component.scss";
     @import "./pages/supplier.scss";
+    @import "./pages/address-dialog.scss"
