--- a/src/app/features/rfq/rfq-bids/rfq-bids.component.html
+++ b/src/app/features/rfq/rfq-bids/rfq-bids.component.html
@@ -16,10 +16,9 @@
           <div *ngFor="let project of rfqProjects; let p = index" [formGroupName]="p">
             <mat-accordion displayMode="flat" multi class="mat-table">
               <mat-expansion-panel class="mat-expansion-panel-body">
-                <mat-expansion-panel-header class="background-color-grey row">
-                  <section matSort class="mat-elevation-z2 mat-header-row">
-                    <span class="mat-header-cell"
-                      mat-sort-header="vesselName">{{ project.projectName }}{{ project.addressLine1 }}</span>
+                <mat-expansion-panel-header class="row">
+                  <section matSort class="mat-elevation-z2">
+                    <span mat-sort-header="vesselName">{{ project.projectName }}{{ project.addressLine1 }}</span>
                   </section>
                 </mat-expansion-panel-header>
                 <div>
