--- a/src/app/features/rfq-supplier-template/rfq-supplier-detail/rfq-supplier-detail.component.html
+++ b/src/app/features/rfq-supplier-template/rfq-supplier-detail/rfq-supplier-detail.component.html
@@ -38,10 +38,10 @@
         </div>
 
 
-        <div displayMode="flat" multi class="mat-table" *ngFor="let projects of rfqSupplierDetailList.projectList">
+        <div class="table-width" displayMode="flat" multi mat-table *ngFor="let projects of rfqSupplierDetailList.projectList">
 
           <!-- Project Name Header -->
-          <section matSort class="mat-header-row blue-background-color color-white">
+          <section matSort class="mat-header-row blue-background-color color-white first-rowheader">
             <div class="mat-header-cell col-xs-2 font-size18" mat-sort-header="projectName">{{projects.projectName}}</div>
           <div class="mat-header-cell col-xs-4 font-size14" mat-sort-header="address">{{projects.addressLine1}},{{projects.city}},{{projects.state}}
             </div>
@@ -56,7 +56,7 @@
           <!-- Material Info -->
           <ng-container *ngFor="let material of projects.materialList">
           <section matSort class="mat-row material-rfq-supplies">
-            <div class="mat-cell font-size18" mat-sort-header="material">{{material.materialName}}</div>
+            <div class="mat-cell font-size14" mat-sort-header="material">{{material.materialName}}</div>
           <div class="mat-cell font-size14" mat-sort-header="qty">Requested Quantity: {{material.materialQuantity}} {{material.materialUnit}}</div>
             <div class="mat border-input" mat-sort-header="gst">
               <mat-form-field class="border-input">
