--- a/src/app/features/global-store/global-store.component.html
+++ b/src/app/features/global-store/global-store.component.html
@@ -36,7 +36,12 @@
         </div>
       </div>
     </mat-card>
-
+  <div class="text-right add-user-details-button-right  p-t-5">
+        <button mat-raised-button (click)="raiseRfq()"
+          class="main-background-color main-button color-white">
+          Raise RFQ
+        </button>
+      </div>
     <div *ngIf="buttonName === 'materialWise'; else elseBlock">
       <app-material-wise [materialData]="globalStoreData[0].data"></app-material-wise>
     </div>
