--- a/src/app/features/indent/indent-dashboard.component.html
+++ b/src/app/features/indent/indent-dashboard.component.html
@@ -47,6 +47,12 @@
         <td mat-cell *matCellDef="let element">{{ element.estimatedQty }} {{element.materialUnit}}</td>
         </ng-container>
 
+         <!-- Name Column -->
+        <ng-container matColumnDef="Required Material">
+          <th mat-header-cell *matHeaderCellDef>Required Material</th>
+        <td mat-cell *matCellDef="let element">  {{ element.requestedQuantity }} {{ element.materialUnit }}</td>
+        </ng-container>
+
         <!-- Weight Column -->
         <ng-container matColumnDef="Required Quantity">
           <th mat-header-cell *matHeaderCellDef>Required Quantity</th>
