--- a/src/app/features/po/po-table/po-table.component.html
+++ b/src/app/features/po/po-table/po-table.component.html
@@ -46,7 +46,7 @@
                             </span>
                             <span class="mat-cell m-r-15">
                                 <mat-form-field class="border-input width50Percent">
-                                    <input matInput #quantity formControlName="materialUnitPrice"
+                                    <input type="number" matInput #quantity formControlName="materialUnitPrice"
                                         placeholder="quantity" />
                                 </mat-form-field>
                             </span>
