--- a/src/app/features/rfq/rfq-bids/rfq-bids.component.html
+++ b/src/app/features/rfq/rfq-bids/rfq-bids.component.html
@@ -1,16 +1,17 @@
 <div class="page-start-point">
   <div class="p-l-20 p-r-20 p-b-20 min-height parent">
-    <div class="row p-t-10 p-b-10">
-      <div class="col-sm-12">
-        <span>
-          <button mat-raised-button class="main-background-color main-button color-white pull-right"
-            (click)="allocateQuantity()">
-            Allocate Quantity
-          </button>
-        </span>
-      </div>
-    </div>
+
     <form *ngIf="rfqProjects.length" (ngSubmit)="allocateQuantity()" [formGroup]="rfqForms">
+      <div class="row p-t-10 p-b-10">
+        <div class="col-sm-12">
+          <span>
+            <button mat-raised-button class="main-background-color main-button color-white pull-right"
+              [disabled]="getFormValidation()">
+              Allocate Quantity
+            </button>
+          </span>
+        </div>
+      </div>
       <div formArrayName="forms">
         <div class="customBid">
           <div *ngFor="let project of rfqProjects; let p = index" [formGroupName]="p">
