--- a/src/app/features/po/po-detail-list/po-detail-list.component.html
+++ b/src/app/features/po/po-detail-list/po-detail-list.component.html
@@ -36,7 +36,7 @@
                 Drafted PO
               </mat-panel-title>
             </mat-expansion-panel-header>
-            <div class="row">
+            <div class="row matCellAlignLeft">
               <table mat-table [dataSource]="poDetails.draftedPOList" class="mat-elevation-z8 col-sm-12">
                 <ng-container matColumnDef="PO Name">
                   <th mat-header-cell *matHeaderCellDef>PO Name</th>
@@ -132,6 +132,7 @@
               </table>
             </div>
 
+            //
             <!-- Accordion for PO Lists -->
             <mat-accordion>
               <div *ngIf="poDetails.draftedPOList">
@@ -173,6 +174,20 @@
                         <th mat-header-cell *matHeaderCellDef></th>
                         <td mat-cell *matCellDef="let element">
                           <a [routerLink]="['../../po/po-generate/',element.purchaseOrderId]">view po</a>
+                        </td>
+                      </ng-container>
+
+                      <ng-container matColumnDef="ViewGRN">
+                        <th mat-header-cell *matHeaderCellDef></th>
+                        <td mat-cell *matCellDef="let element">
+                          <a [routerLink]="['../../po/view-grn/',element.purchaseOrderId]">View GRN</a>
+                        </td>
+                      </ng-container>
+
+                      <ng-container matColumnDef="AddGRN">
+                        <th mat-header-cell *matHeaderCellDef></th>
+                        <td mat-cell *matCellDef="let element">
+                          <a [routerLink]="['../../po/add-grn/',element.purchaseOrderId]">Add GRN</a>
                         </td>
                       </ng-container>
 
