--- a/src/app/features/po/po-table/po-table.component.html
+++ b/src/app/features/po/po-table/po-table.component.html
@@ -5,7 +5,7 @@
             <mat-radio-button value="CGST & SGST">CGST & SGST</mat-radio-button>
         </mat-radio-group>
     </div>
-    <div class="col-xs-12">
+    <div class="col-xs-12 customPo">
         <form *ngIf="poTableData" [formGroup]="poForms" (ngSubmit)="sumbit()">
             <mat-accordion displayMode="flat" multi class="mat-table po-table" formArrayName="forms">
                 <section matSort class="mat-elevation-z2 mat-header-row">
